[package]
name = "mqtt-reeze"
version = "0.1.0"

authors = ["Chris West (Faux) <git@goeswhere.com>"]
description = "Simplified MQTT client"
repository = "https://github.com/FauxFaux/mqtt-reeze"
#readme = "README.md"

categories = ["network-programming"]
license = "MIT OR Apache-2.0"

edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
rumqttc = "0.22"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
