[package]
name = "mqtt-reeze"
version = "0.2.0"

authors = ["Chris West (Faux) <git@goeswhere.com>"]
description = "Simplified MQTT client"
repository = "https://github.com/FauxFaux/mqtt-reeze"
#readme = "README.md"

categories = ["network-programming"]
license = "MIT OR Apache-2.0"

edition = "2024"

[features]
default = []
use-rustls = ["rumqttc/use-rustls"]

[dependencies]
anyhow = "1"
log = "0.4"
rumqttc = { version = "0.25", default-features = false }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
